2024-01-15_kubernetes_generali/counter-manifests-generali/frontend-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  revisionHistoryLimit: 0
  replicas: 4
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: main
          image: harbor.k8ssb.cpas.cz/ondrejsika/counter-frontend
          ports:
            - containerPort: 3000
          startupProbe:
            httpGet:
              path: /api/livez
              port: 3000
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 300m
              memory: 1000Mi
