2024-01-15_kubernetes_generali/counter-manifests-generali/redis-sts.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
spec:
  serviceName: redis
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: main
          image: harbor.k8ssb.cpas.cz/ondrejsika/redis-alpine
          # image: harbor.k8ssb.cpas.cz/docker-hub/library/redis:alpine
          # image: ttl.sh/redis-alpine
          ports:
            - containerPort: 6379
          resources:
            requests:
              cpu: 50m
              memory: 50Mi
            limits:
              cpu: 100m
              memory: 100Mi
