2024-01-15_kubernetes_generali/counter-manifests-generali/counter-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: counter
spec:
  ingressClassName: nginx
  rules:
    - host: ondrejsika-counter.k8sdb.cpas.cz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: counter
                port:
                  number: 80
